--- a/src/components/widgets/Hero2.astro
+++ b/src/components/widgets/Hero2.astro
@@ -1,7 +1,7 @@
 ---
 import {Image} from 'astro:assets';
 import Button from '~/components/ui/Button.astro';
-
+import { twMerge } from 'tailwind-merge';
 import type { Hero as Props } from '~/types';
 
 
@@ -46,7 +46,7 @@ const {
           )
         }
         <div class="max-w-3xl mx-auto lg:max-w-none">
-          {subtitle && <div class="text-xl text-muted mb-6" set:html={subtitle} />}
+          {subtitle && <div class="text-xl text-muted mb-6 flex justify-center lg:justify-start" set:html={subtitle} />}
 
           {
             actions && (
@@ -54,7 +54,7 @@ const {
                 {Array.isArray(actions) ? (
                   actions.map((action) => (
                     <div class="flex w-full sm:w-auto">
-                      <Button {...(action || {})} class="w-full sm:mb-0" />
+                      <Button {...(action || {})} class={twMerge("w-full sm:mb-0" , action.class || '')}/>
                     </div>
                   ))
                 ) : (
