--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -824,7 +824,7 @@ height="2191" -->
 
 <style>
 .shadows-into-light-two-regular {
-  font-family: "Shadows Into Light Two", cursive;
+  font-family: "shadows_into_light_tworegular", cursive;
   font-weight: 400;
   font-style: normal;
 }
