--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 // @ts-ignore  
 import {Navbar, Footer} from '@nfdi4plants/web-components';
-
+import '~/styles/fonts.css';
 
 interface Props {
   title: string;
@@ -20,9 +20,16 @@ const { title } = Astro.props;
     <title>{title}</title>
     <link rel="sitemap" href="/sitemap-index.xml" />
     <!-- these below are required to use the google font used in the web banner -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet"> -->
+    <link
+      rel="preload"
+      href="/fonts/shadowsintolighttwo-regular-webfont.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <main class="flex flex-col min-h-screen mt-[3.5rem]">
@@ -34,6 +41,7 @@ const { title } = Astro.props;
     </main>
   </body>
 </html>
+
 <style is:global>
   :root {
     --accent: 136, 58, 234;
