--- a/src/components/SubPageHero.astro
+++ b/src/components/SubPageHero.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import { bgColorMap, textColorMap, textHoverColorMap, type SectionLink, type SubPageHeroProps } from "../statics"
+import { bgColorMap, textColorMap, textHoverColorMap} from "../statics"
 import {Image} from 'astro:assets';
 import Hero2 from './widgets/Hero2.astro';
 
