--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -3,8 +3,8 @@ import {BibtexParser, type Entry} from "bibtex-js-parser";
 import fs from 'node:fs';
 import Layout from '../layouts/Layout.astro';
 import Publication from '~/components/Publication.astro';
-import SubPageHero from '~/components/SubpageHero.astro';
-import { bgColorMap, textColorMap, groupBy, type SectionLink, type SubPageHeroProps} from "../statics"
+import Hero2 from '~/components/widgets/Hero2.astro';
+import { bgColorMap, textColorMap, groupBy} from "../statics"
 import { type MarkdownInstance } from "astro";
 import { glob } from 'glob'
 
@@ -30,41 +30,15 @@ const groupedPubs : [string, Entry[]][] =
   )
   .reverse()
 
-const heroProps: SubPageHeroProps = {
-  title: "DataPLANT Publications",
-  titleColor: "white",
-  subtitle: "A selection of publications from DataPLANT participants and community",
-  bgColor: "darkblue",
-  textColor: "white",
-  headerColor: "olive-400",
-  emphasisColor: "mint-600",
-  image: "",
-  textPosition: "text-only"
-}
-
 const yearLinks = groupedPubs.map(([year, pubs]) => ({
   title: year,
   slug: year,
   summary: `(${pubs.length})`
 }))
 
-const heroSectionLinks: SectionLink[] = [
-  {
-    title: "Highlighted Publications",
-    slug: "highlighted-publications",
-    summary: "Core concepts and other highlights"
-  },
-  {
-    title: "All Publications",
-    slug: "all-publications",
-    summary: "All publications sorted by year"
-  }
-]
-
 ---
 <Layout title="DataPLANT - Publications">
   <div class="flex flex-col flex-grow place-content-center">
-    <SubPageHero subPageHeroProps={heroProps} sectionLinks={heroSectionLinks}></SubPageHero>
     <div class="mx-auto w-full max-w-7xl pb-10 lg:py-12 lg:px-8">
       <div class="space-y-12 sm:px-6 lg:col-span-12 lg:px-0">
         <h1 id="highlighted-publications" class="title text-darkblue text-4xl mb-4 anchor p-2"><a class="anchor-link" href="#highlighted-publications">Highlighted Publications ({highlightedPubs.length})</a></h2>
