--- a/src/components/widgets/Features.astro
+++ b/src/components/widgets/Features.astro
@@ -30,6 +30,7 @@ const {
       container: '',
       title: 'md:text-[1.3rem]',
       icon: 'text-white bg-primary rounded-full w-10 h-10 p-2 md:w-12 md:h-12 md:p-3 mr-4 rtl:ml-4 rtl:mr-0',
+      description: 'text-justify',
       ...((classes?.items as Record<string, never>) ?? {}),
     }}
   />
