--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-// @ts-ignore  
-import {Navbar, Footer} from '@nfdi4plants/web-components';
+import Navbar from '~/components/Navbar.astro';
+import Footer from '~/components/Footer.astro';
 import '~/styles/fonts.css';
 
 interface Props {
@@ -32,12 +32,12 @@ const { title } = Astro.props;
     />
   </head>
   <body>
-    <main class="flex flex-col min-h-screen mt-[3.5rem]">
-      <Navbar client:only="lit"/>
+    <main class="flex flex-col min-h-screen">
+      <Navbar/>
       <div class="grow">
         <slot />
       </div>
-      <Footer client:only="lit"/>
+      <Footer/>
     </main>
   </body>
 </html>
