--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -85,7 +85,7 @@ export const MainNav: RecursiveMenu[] = [
           
         </NavButton>
         {navItem.children && 
-          <Menu isOpen={true} menu={navItem.children} className="dropdown-content menu bg-base-100 lg:border-r-2 min-h-full w-80 p-4 menu-sm"></Menu>
+          <Menu isOpen={true} menu={navItem.children} className="dropdown-content menu bg-base-100 text-base-content lg:border-r-2 min-h-full w-80 p-4 menu-sm"></Menu>
         }
       </div>
     )}
